--- a/djangoProject/main/templates/main/base.html
+++ b/djangoProject/main/templates/main/base.html
@@ -6,8 +6,38 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="C:\Users\kiril\PycharmProjects\Web-App-on-Django\djangoProject\main\static\main.css">
 </head>
 <body>
+    <div class="left-menu">
+        <div class="head-l-menu">
+            <img src="C:\Users\kiril\PycharmProjects\Web-App-on-Django\djangoProject\main\image\logo.png" alt="logo-icon">
+            <h1>C#-Analytics</h1>
+        </div>
 
+        <hr>
+
+        <div class="menu">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Relevance</a></li>
+                <li><a href="#">Geography</a></li>
+                <li><a href="">Skills</a></li>
+            </ul>
+        </div>
+
+        <hr>
+
+        <div class="footer-menu">
+            <img src="#" alt="icon-image">
+
+            <p>Timohov K.A.</p>
+        </div>
+    </div>
+
+
+    <div class="container">
+
+    </div>
 </body>
 </html>
