--- a/djangoProject/main/templates/main/geography.html
+++ b/djangoProject/main/templates/main/geography.html
@@ -1,13 +1,14 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'main/base.html' %}
+{% load static %}
 
-</body>
-</html>
+{% block title %} География {% endblock %}
+
+
+{% block content %}
+    <h1>География</h1>
+    <img src="{% static "deps/images/top_salary_for_data.png" %}" alt="bar1">
+    <img src="{% static "deps/images/top_salary_for_filtred_data.png" %}" alt="bar1">
+    <img src="{% static "deps/images/top_vacancies_for_data.png" %}" alt="bar1">
+    <img src="{% static "deps/images/top_vacancies_for_filtred_data.png" %}" alt="bar1">
+
+{% endblock %}
