--- a/djangoProject/main/templates/main/index.html
+++ b/djangoProject/main/templates/main/index.html
@@ -1,21 +1,18 @@
 {% extends 'main/base.html' %}
+{% load static %}
 
 {% block title %} Главная страница {% endblock %}
 
 
 {% block content %}
     <h1>Откройте новые горизонты профессии C#</h1>
-    <p>С#-программист – это специалист в области программирования, который специализируется на разработке приложений и программ на языке программирования C#. Эта профессия является одной из наиболее востребованных и перспективных в сфере информационных технологий.
+    <p>С#-программист – это специалист в области программирования, который специализируется на разработке приложений и программ на языке программирования C#. Эта профессия является одной из наиболее востребованных и перспективных в сфере информационных технологий. Работа C#-программиста включает в себя различные задачи, связанные с созданием программного обеспечения. Он разрабатывает приложения, работающие на операционных системах Windows и мобильных устройствах под управлением Windows Phone и Android. C#-программист разрабатывает функциональность программы, реализует взаимодействие с базами данных и другими системами, выполняет тестирование и отладку программного кода.
+        Основной инструмент работы C#-программиста – интегрированная среда разработки (IDE) Visual Studio. Она предоставляет программисту широкий набор инструментов для разработки, отладки и тестирования программного кода на языке C#. С помощью Visual Studio программист создает проекты, в которых содержится весь необходимый функционал для работы программы. Это могут быть графический интерфейс, база данных, алгоритмы и многое другое.
+        C#-программист должен обладать навыками аналитического мышления, уметь разрабатывать оптимальные алгоритмы и структуры данных. Разработка программ требует от программиста глубокого понимания архитектуры и логики работы программного кода. Важно также уметь работать с базами данных, чтобы обеспечить хранение и обработку информации.
+        Сейчас множество компаний и стартапов во всем мире ищут C#-программистов для разработки программного обеспечения. Это может быть разработка приложений для бизнеса, продукты для мобильных устройств или веб-приложения. Работа C#-программиста может быть как удаленной, так и офисной, в зависимости от компании и проекта.
+        Профессия C#-программиста имеет большой потенциал для карьерного роста. Стартовая позиция может быть джуниор-разработчиком или стажером, но с опытом и навыками можно быстро продвинуться до позиции Middle-разработчика, а затем и до Senior-уровня. В дальнейшем можно развиваться в роли технического лидера, архитектора программного обеспечения или даже создать свою собственную компанию.
+        В общем, профессия C#-программиста предоставляет широкие возможности для развития и карьерного роста, и в то же время требует постоянного обучения и совершенствования навыков. Это интересная и высокооплачиваемая профессия, которая позволяет создавать востребованные продукты и приложения для пользователей по всему миру.</p>
 
-Работа C#-программиста включает в себя различные задачи, связанные с созданием программного обеспечения. Он разрабатывает приложения, работающие на операционных системах Windows и мобильных устройствах под управлением Windows Phone и Android. C#-программист разрабатывает функциональность программы, реализует взаимодействие с базами данных и другими системами, выполняет тестирование и отладку программного кода.
+    <img src="{% static 'deps/images/c#prog.jpg' %}" alt="bar1">
 
-Основной инструмент работы C#-программиста – интегрированная среда разработки (IDE) Visual Studio. Она предоставляет программисту широкий набор инструментов для разработки, отладки и тестирования программного кода на языке C#. С помощью Visual Studio программист создает проекты, в которых содержится весь необходимый функционал для работы программы. Это могут быть графический интерфейс, база данных, алгоритмы и многое другое.
-
-C#-программист должен обладать навыками аналитического мышления, уметь разрабатывать оптимальные алгоритмы и структуры данных. Разработка программ требует от программиста глубокого понимания архитектуры и логики работы программного кода. Важно также уметь работать с базами данных, чтобы обеспечить хранение и обработку информации.
-
-Сейчас множество компаний и стартапов во всем мире ищут C#-программистов для разработки программного обеспечения. Это может быть разработка приложений для бизнеса, продукты для мобильных устройств или веб-приложения. Работа C#-программиста может быть как удаленной, так и офисной, в зависимости от компании и проекта.
-
-Профессия C#-программиста имеет большой потенциал для карьерного роста. Стартовая позиция может быть джуниор-разработчиком или стажером, но с опытом и навыками можно быстро продвинуться до позиции Middle-разработчика, а затем и до Senior-уровня. В дальнейшем можно развиваться в роли технического лидера, архитектора программного обеспечения или даже создать свою собственную компанию.
-
-В общем, профессия C#-программиста предоставляет широкие возможности для развития и карьерного роста, и в то же время требует постоянного обучения и совершенствования навыков. Это интересная и высокооплачиваемая профессия, которая позволяет создавать востребованные продукты и приложения для пользователей по всему миру.</p>
 {% endblock %}
