--- a/djangoProject/main/templates/main/recent_vacancies.html
+++ b/djangoProject/main/templates/main/recent_vacancies.html
@@ -8,13 +8,13 @@
     <table style="border: 1px solid rgb(0, 0, 0);">
       <thead>
         <tr>
-            <th style="border: 1px solid rgb(0, 0, 0);">Название вакансии</th>
-            <th style="border: 1px solid rgb(0, 0, 0);">Описание вакансии</th>
-            <th style="border: 1px solid rgb(0, 0, 0);">Навыки</th>
-            <th style="border: 1px solid rgb(0, 0, 0);">Компания</th>
-            <th style="border: 1px solid rgb(0, 0, 0);">Оклад</th>
-            <th style="border: 1px solid rgb(0, 0, 0);">Название региона</th>
-            <th style="border: 1px solid rgb(0, 0, 0);">Дата публикации вакансии</th>
+            <th style="border: 1px solid rgb(0, 0, 0); background-color: lightgray">Название вакансии</th>
+            <th style="border: 1px solid rgb(0, 0, 0); background-color: lightgray">Описание вакансии</th>
+            <th style="border: 1px solid rgb(0, 0, 0); background-color: lightgray">Навыки</th>
+            <th style="border: 1px solid rgb(0, 0, 0); background-color: lightgray">Компания</th>
+            <th style="border: 1px solid rgb(0, 0, 0); background-color: lightgray">Оклад</th>
+            <th style="border: 1px solid rgb(0, 0, 0); background-color: lightgray">Название региона</th>
+            <th style="border: 1px solid rgb(0, 0, 0); background-color: lightgray">Дата публикации вакансии</th>
         </tr>
       </thead>
       <tbody>
