--- a/djangoProject/main/templates/main/skills.html
+++ b/djangoProject/main/templates/main/skills.html
@@ -2,25 +2,17 @@
 {% load static %}
 {% block title %} Навыки {% endblock %}
 
+{% block links%}
+    <link rel="stylesheet" href="{% static "deps/css/skills.css" %}">
+{% endblock %}
 
 {% block content %}
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2015.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2016.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2017.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2018.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2019.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2020.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2021.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2022.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2023.png" %}" alt="bar{{ f }}">
-
-
-    <h3>ТОП-20 навыков по годам</h3>
-    <table style="border: 1px solid rgb(0, 0, 0);">
+    <h1>ТОП-20 навыков по годам</h1>
+    <table class ="table1" style="border: 1px solid rgb(0, 0, 0);">
       <thead>
         <tr>
             {% for i in frame.columns.values %}
-                <th style="border: 1px solid rgb(0, 0, 0);">{{ i }}</th>
+                <th style="border: 1px solid rgb(0, 0, 0); background-color: lightgray">{{ i }}</th>
             {% endfor %}
         </tr>
       </thead>
@@ -35,22 +27,34 @@
         </tbody>
     </table>
 
-    <h3>ТОП-20 навыков по годам для C#-программиста</h3>
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2015_filtred.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2016_filtred.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2017_filtred.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2018_filtred.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2019_filtred.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2020_filtred.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2021_filtred.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2022_filtred.png" %}" alt="bar{{ f }}">
-    <img src="{% static "deps/images/graphs_for_geography/top_20_2023_filtred.png" %}" alt="bar{{ f }}">
+    <div class="imgs_">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2015.png" %}" alt="bar{{ f }}">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2016.png" %}" alt="bar{{ f }}">
+    </div>
+    <div class="imgs_">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2017.png" %}" alt="bar{{ f }}">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2018.png" %}" alt="bar{{ f }}">
+    </div>
+    <div class="imgs_">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2019.png" %}" alt="bar{{ f }}">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2020.png" %}" alt="bar{{ f }}">
+    </div>
+    <div class="imgs_">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2021.png" %}" alt="bar{{ f }}">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2022.png" %}" alt="bar{{ f }}">
+    </div>
+    <div class="imgs">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2023.png" %}" alt="bar{{ f }}">
+    </div>
 
-    <table style="border: 1px solid rgb(0, 0, 0);">
+    <h1>ТОП-20 навыков по годам для C#-программиста</h1>
+
+    <div class="table_">
+    <table style="border: 1px solid rgb(0, 0, 0); margin-bottom: 20px">
       <thead>
         <tr>
             {% for i in filtred_frame.columns.values %}
-                <th style="border: 1px solid rgb(0, 0, 0);">{{ i }}</th>
+                <th style="border: 1px solid rgb(0, 0, 0); background-color: lightgray">{{ i }}</th>
             {% endfor %}
         </tr>
       </thead>
@@ -64,4 +68,26 @@
             {% endfor %}
         </tbody>
     </table>
+    </div>
+
+    <div class="imgs_">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2015_filtred.png" %}" alt="bar{{ f }}">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2016_filtred.png" %}" alt="bar{{ f }}">
+    </div>
+    <div class="imgs_">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2017_filtred.png" %}" alt="bar{{ f }}">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2018_filtred.png" %}" alt="bar{{ f }}">
+    </div>
+    <div class="imgs_">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2019_filtred.png" %}" alt="bar{{ f }}">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2020_filtred.png" %}" alt="bar{{ f }}">
+    </div>
+    <div class="imgs_">
+            <img src="{% static "deps/images/graphs_for_geography/top_20_2021_filtred.png" %}" alt="bar{{ f }}">
+    <img src="{% static "deps/images/graphs_for_geography/top_20_2022_filtred.png" %}" alt="bar{{ f }}">
+    </div>
+    <div class="imgs">
+        <img src="{% static "deps/images/graphs_for_geography/top_20_2023_filtred.png" %}" alt="bar{{ f }}">
+    </div>
+
 {% endblock %}
