--- a/djangoProject/main/static/deps/css/main.css
+++ b/djangoProject/main/static/deps/css/main.css
@@ -13,19 +13,21 @@ body {
 /* Основные свойства для бокового меню */
 .menu {
   display: flex;
+  justify-content: space-between;
   flex-direction: column; /* размещаем элементы к колонку */
   width: 270px;
   min-height: 100vh; /* на всю высоту экрана */
   position: fixed; /* чтобы меню было фиксированным */
   top: 0; /* прижимаем к верхнему */
   left: 0; /* .. и нижнему краю */
-  background-color: #1f77b4;
+  background-color: #FF7B00;
   box-shadow: 4px 4px 8px 0 rgba(34, 60, 80, 0.2); /* задаем тень, чтобы отделить от фона */
 }
 
 /* Свойства для контента */
 .content {
   padding: 40px 40px 40px 310px;
+  background-color: #EDE7E3;
 }
 
 .header {
@@ -56,6 +58,9 @@ body {
 
 .menu__logo  h2 {
   color: white;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 115px;
 }
 
 .menu__logo img{
@@ -113,7 +118,7 @@ body {
   top: 0;
   width: 5px;
   height: 100%;
-  background-color: #ffa000;
+  background-color: #16697A;
 }
 
 .menu__footer{
@@ -123,6 +128,8 @@ body {
 
 .menu__footer footer{
   color: white;
+  padding-bottom: 50px;
+  padding-top: 80px;
 }
 
 .menu__footer footer span{
@@ -136,4 +143,14 @@ body {
 .menu__admin {
   margin-top: auto;
   padding-bottom: 40px;
+}
+
+.content h1{
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+.content p{
+  text-align: justify;
+  padding-bottom: 20px;
 }
