--- a/djangoProject/main/templates/main/base.html
+++ b/djangoProject/main/templates/main/base.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %} {% endblock %}</title>
     <link rel="stylesheet" href="{% static "deps/css/main.css" %}">
-    <link rel="shortcut icon" href="{% static 'deps/favicon/logo.ico' %}">
+    <link rel="shortcut icon" href="{% static "deps/icons/logotype.png" %}">
     {% block links %}
     {%endblock%}
 </head>
